# airflow-db2-plugin

./: Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/airflow_db2_plugin/: __init__.py
src/airflow_db2_plugin/hooks/: __init__.py  db2_hook.py
src/airflow_db2_plugin/operators/: db2_to_file_operator.py
