[metadata]
name = airflow-db2-plugin
package_name = airflow_db2_plugin
version = 0.0.1
description = Apache Airflow DB2 Plugin
url = https://github.com/techalchemy/airflow-db2-plugin
author = Dan Ryan
author_email =
long_description = file: README.rst
license = MIT License
keywords =
    apache
    airflow
    plugin
    db2
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English
    Environment :: Plugins

[options.extras_require]

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=36.2.2
install_requires =
    pyodbc==3.1.1
    ibm-db-sa-py3==0.3.1-1

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -rxsX --flake8 -n 4 --cov
norecursedirs = .git _build dist news tasks docs
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 88
ignore = D203,F401,E123,W503,E203
exclude =
    src/airflow_db2_plugin/vendor/*
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13
import-order-style = google
application-import-names = flake8

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = 1
known_third_party =airflow,pyodbc,setuptools,sqlalchemy
known_first_party = airflow_db2_plugin
include_trailing_comma = true
